--- a/Makefile_comm
+++ b/Makefile_comm
@@ -6,15 +6,14 @@ prefix     = $(shell pwd)
 bindir     = $(prefix)/bin
 
 # Define objects in dependency order
-OBJECTS   = mt19937ar.o gpu_tools.o mc_cpu.o mc_gpu.o
+OBJECTS   = mt19937ar.o gpu_tools.o mc_cpu.o mc_gpu.o functions/read_input_variables.o
 
 CC    = gcc
 NVCC  = nvcc
 LD     = nvcc
 CFLAGS =  -O3 
-NVFLAGS = -O3 -gencode arch=compute_35,code=sm_35 \
-	          -gencode arch=compute_75,code=sm_75 \
-			  -gencode arch=compute_60,code=sm_60 --generate-line-info
+NVFLAGS = -O3 -gencode arch=compute_60,code=sm_60 \
+			  -gencode arch=compute_86,code=sm_86 --generate-line-info
 
 .PRECIOUS: %.o
 .PHONY:  clean
