--- a/pyviz/pyproject.toml
+++ b/pyviz/pyproject.toml
@@ -11,6 +11,8 @@ jupyter = "^1.0.0"
 numpy = "^1.25.1"
 plotly = "^5.15.0"
 pandas = "^2.0.3"
+kaleido = "0.2.1"
+plotly-gif = "^0.0.4"
 
 
 [build-system]
