--- a/pyviz/pyproject.toml
+++ b/pyviz/pyproject.toml
@@ -6,13 +6,14 @@ authors = ["Pip Grylls <pip.grylls@warwick.ac.uk>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.10"
 jupyter = "^1.0.0"
-numpy = "^1.25.1"
+numpy = "==1.23.0"
 plotly = "^5.15.0"
 pandas = "^2.0.3"
 kaleido = "0.2.1"
 plotly-gif = "^0.0.4"
+numba = "*"
 
 
 [build-system]
