--- a/Makefile_comm
+++ b/Makefile_comm
@@ -18,7 +18,7 @@ NVFLAGS = -O3 -gencode arch=compute_60,code=sm_60 \
 .PRECIOUS: %.o
 .PHONY:  clean
 
-all : calculate_commitor
+all : calculate_committor
 
 %: %.o
 %.o: %.c %.h
@@ -27,12 +27,12 @@ all : calculate_commitor
 %.o: %.cu %.h
 	$(NVCC) $(NVFLAGS) -c -o $@ $<
 
-calculate_commitor:  $(OBJECTS) calculate_commitor.cu
+calculate_committor:  $(OBJECTS) calculate_committor.cu
 
-	$(LD) -o $(bindir)/calculate_commitor $(OBJECTS) calculate_commitor.cu  $(NVFLAGS) 
+	$(LD) -o $(bindir)/calculate_committor $(OBJECTS) calculate_committor.cu  $(NVFLAGS) 
 
 clean : 
 
 	rm -f *.mod *.d *.il *.o work.*
-	rm -f $(bindir)/calculate_commitor
+	rm -f $(bindir)/calculate_committor
 
