--- a/pytools/pyproject.toml
+++ b/pytools/pyproject.toml
@@ -19,3 +19,11 @@ pytest = "^7.4.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+# pyproject.toml
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-ra -q"
+testpaths = [
+    "./tests",
+]
