Added read input file function to objects

--- a/Makefile_GPU
+++ b/Makefile_GPU
@@ -6,7 +6,7 @@ prefix     = $(shell pwd)
 bindir     = $(prefix)/bin
 
 # Define objects in dependency order
-OBJECTS   = mt19937ar.o gpu_tools.o mc_cpu.o mc_gpu.o io.o
+OBJECTS   = mt19937ar.o gpu_tools.o mc_cpu.o mc_gpu.o io.o functions/read_input_variables.o
 
 CC    = gcc
 NVCC  = nvcc
