fixing the write tool to write the configurations correctly

--- a/pytools/pyproject.toml
+++ b/pytools/pyproject.toml
@@ -27,3 +27,6 @@ addopts = "-ra -q"
 testpaths = [
     "./tests",
 ]
+#markers = [
+#    "configfile: mark a test as requiring a config test.",
+#]
