added module init files

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 bin/
 neural_net/performance
 neural_net/modules/__init__.py
-neural_net/modules/__pycahce__
+neural_net/__pycache__
 neural_net/figures
 
