--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ neural_net/figures
 neural_net/plotting_data
 neural_net/training_data
 neural_net/modules/__init__.py
-neural_net/__pycache__
+neural_net/modules/__pycache__
 
