--- a/Makefile_comm
+++ b/Makefile_comm
@@ -12,8 +12,7 @@ CC    = gcc
 NVCC  = nvcc
 LD     = nvcc
 CFLAGS =  -O3 
-NVFLAGS = -O3 -gencode arch=compute_60,code=sm_60 \
-			  -gencode arch=compute_86,code=sm_86 --generate-line-info
+NVFLAGS = -O3 -gencode arch=compute_80,code=sm_80 --generate-line-info
 
 .PRECIOUS: %.o
 .PHONY:  clean
